# Sudoku

./: .gitignore  CMakeLists.txt
src/: main.cpp  sudoku_error.cpp  sudoku_map.cpp
src/include/: sudoku_error.h  sudoku_map.h
